Rename Readme and Product to License, Fix scrollbar disappearing.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -53,6 +53,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	scroll-behavior: smooth;
+	overflow: visible !important;
 }
 
 /*
